tests/snapshots/run_wpt_conformance__coreml_equal_float32_1D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
equal.https.any.js equal float32 1D tensors, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'inputB' must be of rank 2, instead got a multi-array value of rank 1.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f32[24];
    inputB: f32[24];
  }

  nodes {
    [output] = equal(inputA, inputB, label="");
  }

  outputs { output; }
}
