tests/snapshots/run_wpt_conformance__coreml_equal_float32_broadcast_4D_to_5D.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
equal.https.any.js equal float32 broadcast 4D to 5D, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'inputB' must be of rank 4, instead got a multi-array value of rank 5.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f32[2, 1, 1, 3];
    inputB: f32[1, 2, 2, 1, 1];
  }

  nodes {
    [output] = equal(inputA, inputB, label="");
  }

  outputs { output; }
}
