tests/snapshots/run_wpt_conformance__coreml_erf_float16_1D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
erf.https.any.js erf float16 1D constant tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983277179_0_43362C26-D0EA-41D4-B7DD-936C5F8E13D4.mlmodelc/model.mil' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([181, 184, 66, 184, 24, 48, 158, 56, 61, 59, 250, 183, 224, 59, 237, 50, 10, 52, 198, 176, 79, 59, 151, 184, 236, 57, 41, 56, 76, 177, 104, 58, 103, 54, 254, 185, 40, 187, 70, 182, 124, 57, 101, 185, 9, 183, 86, 52]);
  }

  nodes {
    [erfOutput] = erf(operand_0, label="");
  }

  outputs { erfOutput; }
}
E5RT encountered an STL exception. msg = Espresso exception: "Network translation error": MIL->EIR translation error at /private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983277179_0_43362C26-D0EA-41D4-B7DD-936C5F8E13D4.mlmodelc/model.mil:6:12: Storage Reader expects file format version 2..
