tests/snapshots/run_wpt_conformance__coreml_exp_float16_1D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
exp.https.any.js exp float16 1D constant tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983277604_0.mlmodelc/model.mil' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([121, 53, 159, 194, 101, 195, 27, 197, 121, 69, 89, 172, 122, 65, 24, 195, 87, 69, 14, 189, 85, 187, 139, 200, 4, 196, 172, 68, 84, 71, 38, 72, 88, 199, 108, 187, 214, 190, 222, 200, 230, 191, 26, 72, 69, 199, 46, 195]);
  }

  nodes {
    [expOutput] = exp(operand_0, label="");
  }

  outputs { expOutput; }
}
E5RT encountered an STL exception. msg = Espresso exception: "Network translation error": MIL->EIR translation error at /private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983277604_0.mlmodelc/model.mil:6:12: Storage Reader expects file format version 2..
