tests/snapshots/run_wpt_conformance__coreml_expand_float16_1D_tensor_to_5D.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
expand.https.any.js expand float16 1D tensor to 5D, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'expandInput' must be of rank 2, instead got a multi-array value of rank 1.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    expandInput: f16[1];
  }

  nodes {
    [expandOutput] = expand(expandInput, label="");
  }

  outputs { expandOutput; }
}
