tests/snapshots/run_wpt_conformance__coreml_floor_float16_1D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
floor.https.any.js floor float16 1D constant tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983280062_0.mlmodelc/model.mil' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([155, 85, 251, 212, 45, 212, 126, 212, 101, 85, 211, 70, 58, 78, 202, 59, 253, 76, 192, 58, 48, 206, 220, 84, 53, 208, 12, 85, 143, 81, 181, 208, 61, 213, 29, 84, 251, 208, 17, 80, 78, 205, 5, 213, 43, 76, 142, 212]);
  }

  nodes {
    [floorOutput] = floor(operand_0, label="");
  }

  outputs { floorOutput; }
}
E5RT encountered an STL exception. msg = Espresso exception: "Network translation error": MIL->EIR translation error at /private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983280062_0.mlmodelc/model.mil:6:12: Storage Reader expects file format version 2..
