tests/snapshots/run_wpt_conformance__coreml_floor_float16_2D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
floor.https.any.js floor float16 2D tensor, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'floorInput' must be of rank 3, instead got a multi-array value of rank 2.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    floorInput: f16[4, 6];
  }

  nodes {
    [floorOutput] = floor(floorInput, label="");
  }

  outputs { floorOutput; }
}
